# kitchentimer

./: .gitignore  Cargo.toml  README.md
src/: alarm.rs  buffer.rs  clock.rs  common.rs  consts.rs  cradle.rs  kitchentimer.rs  layout.rs  lib.rs  main.rs  tests.rs  utils.rs
src/clock/: font.rs
