[package]
name = "kitchentimer"
version = "0.1.0"
authors = ["Shy <shy@posteo.de>"]
license = "GPL-3.0-or-later"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "1.5.6"
signal-hook = "0.3.8"
unicode-segmentation = "1.7.1"
unicode-width = "0.1.8"
